2009-09-17  Bram de Greve <bram.degreve@bramz.net>

	* shpopen.c: on Win32, define snprintf as alias to _snprintf

2008-11-12  Frank Warmerdam  <warmerdam@pobox.com>

	* shptree.c: improve safety in face of buggy .shp file. 
	http://trac.osgeo.org/gdal/ticket/2610

	* dbfopen.c: DBFCreateField() can now also operate on files with
	records, c/o Martin Dobias. 
	https://trac.osgeo.org/gdal/ticket/2672

2008-11-11  Frank Warmerdam  <warmerdam@pobox.com>

	* dbfopen.c: Introduce DBFDeleteField() function from Martin Dobias.
	http://trac.osgeo.org/gdal/ticket/2671

2008-03-14  Frank Warmerdam  <warmerdam@pobox.com>

	* Correct crash on buggy geometries (Even Rouault).
	http://trac.osgeo.org/gdal/ticket/2218

2008-01-16  Bram de Greve <bram.degreve@bramz.net>

	* shapefil.h, safileio.c:  add file hooks that accept UTF-8
	encoded filenames on some platforms.  Use SASetupUtf8Hooks
	to setup the hooks and check SHPAPI_UTF8_HOOKS for its
	availability.  Currently, this is only available on the Windows
	platform that decodes the UTF-8 filenames to wide character 
	strings and feed them to _wfopen and _wremove.
	
2008-01-10  Frank Warmerdam  <warmerdam@pobox.com>

	* shapefil.h: Avoid _ prefix on #defines.
	http://bugzilla.maptools.org/show_bug.cgi?id=1840

2008-01-03  Bram de Greve <bram.degreve@bramz.net>

	* dbfopen.c: in DBFCreate, use default code page
	LDID/87 (= 0x57, ANSI) instead of LDID/3.  This seems 
	to be the same as what ESRI would be doing by default.

2007-12-30  Frank Warmerdam  <warmerdam@pobox.com>

	* shpadd.c/shpcreate.c: Add support for z and m files.

	* Massive overhaul to use hooks for file io, etc. 

2007-12-18  Bram de Greve <bram.degreve@bramz.net>

	* dbfopen.c/shapefil.h/safileio.c:  create hook for client 
	specific atof http://bugzilla.maptools.org/show_bug.cgi?id=1615
	
	* dbfopen.c: check for NULL handle before closing cpCPG file, 
	and close after reading.

2007-12-15  Bram de Greve <bram.degreve@bramz.net>
