@@ -1,3 +1,8 @@
+2009-10-29  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* dbfopen.c: avoid crash risk for truncated files. 
+	http://trac.osgeo.org/gdal/ticket/3093
+
 2009-09-17  Bram de Greve <bram.degreve@bramz.net>
 
 	* shpopen.c: on Win32, define snprintf as alias to _snprintf
